--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9.39.1",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5"
   },
-  "packageManager": "pnpm@10.23.0"
+  "packageManager": "pnpm@10.28.0"
 }
